<resources>
    <string name="app_name">ShopClothesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="address">Address</string>
    <string name="personal_information">Personal Information</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>

    <string name="intro_title">Welcome To \nClothes App</string>
    <string name="intro_des">Application to sell all\nkinds of clothes and accessories</string>
    <string name="title_login">Hi,\nPlease Login</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_google">Google</string>
    <string name="register">Create new an account? <font style="bold" color="#FF8F4C38">Register now</font> </string>
    <string name="forgot_password">Don\'t remember Password?</string>
    <string name="email_login_test">huy@gmail.com</string>
    <string name="password_login_test">123huy</string>
    <string name="save">Save</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="add_address">Add Address</string>
    <string name="update">Update</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_payment">Edit Payment</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="ccv">CCV</string>
    <string name="add_payment">Add Payment</string>
    <string name="payment">Payment</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back_to_login">Have an account? Login now\n</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="checkout">Checkout</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="total_amount">Total Amount</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="select_size">Select Size</string>
    <string name="sub_total">Sub-total</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="phone_number_contact">Phone number contact</string>
    <string name="shipping_address">Shipping address</string>
    <string name="total">Total</string>
    <string name="cod">COD</string>
    <string name="stripe">Stripe</string>
    <string name="paypal">Paypal</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="shipping_fee_price">0 đ</string>
    <string name="payment_method">Payment method</string>
    <string name="shipping">Shipping</string>
    <string name="order_place_successfully">Order place successfully</string>
    <string name="thanks_for_your_orders">Thanks for your orders</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="all_products">All Products</string>
    <string name="see_all">See all</string>
    <string name="the_most_popular_nclothes_today">The most popular\nclothes today</string>
    <string name="not_found_product">Not found product</string>
</resources>